# crcgen

./: Cargo.toml  README.md  build.sh  test.yml
src/: main.rs
