[package]
name = "crcgen"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

# Quick hacks to minimize size.
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
